plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.19.0'
}

group = 'com.likelion'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ==== Spring Boot Starters ====
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // ==== Database ====
    // MySQL JDBC 드라이버
    runtimeOnly 'com.mysql:mysql-connector-j'

    // ==== Flyway (DB 마이그레이션) ====
    // - flyway-core: 마이그레이션 엔진
    // - flyway-mysql: MySQL 전용 기능/방언 분리 모듈 (Flyway 10+)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // 레이트리미트/재시도
    implementation "io.github.resilience4j:resilience4j-reactor:2.2.0"
    implementation "io.github.resilience4j:resilience4j-ratelimiter:2.2.0"
    implementation "io.github.resilience4j:resilience4j-bulkhead:2.2.0"

    // ==== Lombok ====
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ==== Swagger / OpenAPI ====
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'

    // ==== JWT (JSON Web Token) ====
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ==== s3 ====
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.463'

    // ==== Netty native DNS for macOS (Netty가 네이티브 DNS 리졸버를 사용) ====
    // Spring Boot의 dependency management가 Netty 버전을 맞춰주므로 버전 표기는 생략
    implementation "io.netty:netty-resolver-dns-native-macos::osx-aarch_64"

    // ==== Cache ====
    implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"

    // ==== Test ====
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('compileJava') {
    dependsOn 'spotlessApply'
}

// Spotless 설정
spotless {
    java {
        googleJavaFormat()

        importOrder('java', 'javax', 'jakarta', 'org.springframework', 'com.likelion', 'com')

        removeUnusedImports()

        trimTrailingWhitespace()

        endWithNewline()
    }
}

check.dependsOn 'spotlessCheck'

// 환경 설정 파일 복사
tasks.register('copyResources', Copy) {
    from './PICKL_BE_Config'
    include '*.properties'
    into 'src/main/resources/'
}

// Spring build, bootRun 전 복사되도록 연결
processResources {
    dependsOn 'copyResources'
}

tasks.named('bootRun') {
    dependsOn 'copyResources'
}

// 테스트 실행 시 profile 지정 가능하게
test {
    doFirst {
        def profile = project.hasProperty('profile') ? project.property('profile').toString() : 'local'
        jvmArgs = ["-Dspring.profiles.active=${profile}"]
    }
}